did some stretch goals. fixed the navigation bar so it scrolls with user and I added a new font to the page with google fonts

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -65,27 +65,34 @@ h1, h2, h3, h4, h5 {
 
 /* Your code starts here! */
 
-/* Navigation */
-
-
-
 .container {
 	width: 70%;
 	height: 50%;
 	margin-left: auto;
 	margin-right: auto;
-  }
+  	}
 
-nav {
-	word-spacing: 70px;
-	
+/* Navigation */
+
+	nav {
+		word-spacing: 70px;
+		position: fixed;
+		background-color: lightpink;
+		border: 1px solid black;
+		
+		}
+
+	a:link {
+	color:lightgrey;
+	text-decoration: none;
 	}
 
-a:link {
-	color:grey;
-	text-decoration: none;
-	
-}
+	a:hover
+	 {
+		color: black;
+		text-decoration: underline
+	}
+
 /* header */
 
 .logo {
@@ -140,14 +147,17 @@ margin: 0px 400px;
 
 /* body */
 
-
+.font-change {
+	font-family: 'Playfair Display SC', serif;
+	font-family: 'Viga', sans-serif;
+}
 
 .box-1 {
 	margin: auto;
 	margin-left: 60px;
 	display: inline-block;
 	width: 300px;
-  }
+	}
 
 .box-2 {
 	display: inline-block;
